# zix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md  USAGE.md
examples/notes/: README.md  ideas.md
examples/notes/data/: example.json
examples/notes/snippets/: setup.sh  sort.ts
src/: args.js  cli.js  crypto.js  highlight.js  index.js  markdown.js  pack.js  render.js
src/template/: page.html  runtime.js  styles.css
src/zix/: __init__.py  __main__.py  cli.py  core.py  display.py  storage.py
test/: args.test.js  cli.test.js  crypto.test.js  encrypted-roundtrip.test.js  highlight.test.js  markdown.test.js  pack.test.js  render.test.js  security.test.js
tests/: conftest.py  test_cli.py  test_core.py  test_storage.py
