[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zix"
version = "0.1.0"
description = "A beautiful, zero-friction focus timer and task tracker for your terminal."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "zix contributors" }]
keywords = ["pomodoro", "focus", "timer", "productivity", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/luffyxak/zix"
Repository = "https://github.com/luffyxak/zix"
Issues = "https://github.com/luffyxak/zix/issues"

[project.scripts]
zix = "zix.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zix"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
